--- a/Dwarf_Game_DES310.uproject
+++ b/Dwarf_Game_DES310.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "Dwarf_Game_DES310",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
