Started working on local multiplayer: splitscreen works, just need to add controls to Player 2

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,6 +15,7 @@ GameDefaultMap=/Game/TestLevels/Blank_Canvas.Blank_Canvas
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/Dwarf_Game_DES310.Dwarf_Game_DES310GameMode
 GlobalDefaultServerGameMode=None
+bOffsetPlayerGamepadIds=False
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_14
