Reworked the collectibles, added the dwarf model and animations,added more place holder models

--- a/Dwarf_Game_DES310.uproject
+++ b/Dwarf_Game_DES310.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.0",
+	"EngineAssociation": "{7600685F-49B3-EEA5-A2EB-3E8F3FD063EC}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
