Exposed variables and continued implementing the throw

--- a/Dwarf_Game_DES310.uproject
+++ b/Dwarf_Game_DES310.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.0",
+	"EngineAssociation": "{3336DC83-4308-C32E-7A3A-BE94029C7089}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
