removed the first person content

--- a/Dwarf_Game_DES310.uproject
+++ b/Dwarf_Game_DES310.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{17EF4649-455B-90EA-176E-6DB2A08570AC}",
+	"EngineAssociation": "5.0",
 	"Category": "",
 	"Description": "",
 	"Modules": [
