Fixed local multiplayer gamepad assigning

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,11 +11,11 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Vertical
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/TestLevels/Blank_Canvas.Blank_Canvas
+GameDefaultMap=/Game/LevelPrototyping/Levels/Prototype_1GreyboxA_OptimisationTest.Prototype_1GreyboxA_OptimisationTest
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/Dwarf_Game_DES310.Dwarf_Game_DES310GameMode
 GlobalDefaultServerGameMode=None
-bOffsetPlayerGamepadIds=True
+bOffsetPlayerGamepadIds=False
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_14
