--- a/Dwarf_Game_DES310.uproject
+++ b/Dwarf_Game_DES310.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{15D102E4-4802-6989-D8A0-B6991C95B6F9}",
+	"EngineAssociation": "5.0",
 	"Category": "",
 	"Description": "",
 	"Modules": [
