made the bridge fall
it just works. okay

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -29,6 +29,8 @@ r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 
 r.Shadow.Virtual.Enable=1
 r.CustomDepth=3
+r.AntiAliasingMethod=1
+r.DefaultFeature.AutoExposure=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
