--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -112,8 +112,10 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Light Attack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="PlayerDash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="PlayerDash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
-+ActionMappings=(ActionName="Heavy Input",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
-+ActionMappings=(ActionName="Heavy Input",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
++ActionMappings=(ActionName="Heavy Attack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++ActionMappings=(ActionName="Heavy Attack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
++ActionMappings=(ActionName="Emote",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
++ActionMappings=(ActionName="Emote",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Down)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=1.000000,Key=Up)
