Added player pause controls on gamepad

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -122,6 +122,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Emote2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Left)
 +ActionMappings=(ActionName="Emote4",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Up)
 +ActionMappings=(ActionName="Emote3",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Right)
++ActionMappings=(ActionName="PauseGame",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
++ActionMappings=(ActionName="PauseGame",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Right)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Move Forward / Backward",Scale=1.000000,Key=Up)
