Added the wisp Idle movement and proper tracking of the player

--- a/Dwarf_Game_DES310.uproject
+++ b/Dwarf_Game_DES310.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.0",
+	"EngineAssociation": "{397DF8C3-452F-4693-FC2B-8A883232412E}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
