--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -31,6 +31,7 @@ r.Shadow.Virtual.Enable=1
 r.CustomDepth=3
 r.AntiAliasingMethod=1
 r.DefaultFeature.AutoExposure=False
+r.MobileNumDynamicPointLights=4
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
