--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Vertical
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/LevelPrototyping/Levels/Trailer.Trailer
+GameDefaultMap=/Game/TestLevels/Splash.Splash
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/Dwarf_Game_DES310.Dwarf_Game_DES310GameMode
 GlobalDefaultServerGameMode=None
