--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -32,6 +32,11 @@ r.CustomDepth=3
 r.AntiAliasingMethod=2
 r.DefaultFeature.AutoExposure=False
 r.MobileNumDynamicPointLights=4
+r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=True
+r.SkinCache.CompileShaders=True
+r.RayTracing=True
+r.Lumen.HardwareRayTracing=True
+r.AllowStaticLighting=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
