started implementing custom widgets in c++

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TestLevels/Blank_Canvas.Blank_Canvas
+EditorStartupMap=/Game/LevelPrototyping/Levels/Prototype_Alpha_Test1.Prototype_Alpha_Test1
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
